logs/provide.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/provide'...
Listing './lib/python3.5/site-packages/provide/application'...
Listing './lib/python3.5/site-packages/provide/cli'...
Compiling './lib/python3.5/site-packages/provide/cli/admin.py'...
***   File "./lib/python3.5/site-packages/provide/cli/admin.py", line 76
    print usage
              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/provide/command'...
Compiling './lib/python3.5/site-packages/provide/command/package.py'...
***   File "./lib/python3.5/site-packages/provide/command/package.py", line 60
    except Exception, inst:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/provide/dippy_example.py'...
***   File "./lib/python3.5/site-packages/provide/dippy_example.py", line 13
    print "GIRL(in %s, named %s) SAYS: Mwah!" % (self.context, self.name)
                                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/provide/django'...
Listing './lib/python3.5/site-packages/provide/django/apps'...
Listing './lib/python3.5/site-packages/provide/django/apps/eui'...
Listing './lib/python3.5/site-packages/provide/django/apps/eui/views'...
Listing './lib/python3.5/site-packages/provide/django/settings'...
Listing './lib/python3.5/site-packages/provide/django/settings/urls'...
Listing './lib/python3.5/site-packages/provide/dom'...
Compiling './lib/python3.5/site-packages/provide/filesystem.py'...
***   File "./lib/python3.5/site-packages/provide/filesystem.py", line 13
    print "Creating folder: %s" % path
                              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/provide/plugin'...
Compiling './lib/python3.5/site-packages/provide/plugin/apache.py'...
***   File "./lib/python3.5/site-packages/provide/plugin/apache.py", line 82
    print "OK"
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/provide/plugin/base.py'...
***   File "./lib/python3.5/site-packages/provide/plugin/base.py", line 177
    print cmd
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/provide/plugin/dojo.py'...
***   File "./lib/python3.5/site-packages/provide/plugin/dojo.py", line 19
    print cmd
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/provide/plugin/domainmodel.py'...
***   File "./lib/python3.5/site-packages/provide/plugin/domainmodel.py", line 36
    os.chmod(filePath, 0444)
                          ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/provide/plugin/example.py'...
***   File "./lib/python3.5/site-packages/provide/plugin/example.py", line 14
    raise Exception, msg
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/provide/script.py'...
***   File "./lib/python3.5/site-packages/provide/script.py", line 36
    print statement
                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/provide/url.py'...
***   File "./lib/python3.5/site-packages/provide/url.py", line 73
    raise Exception, 'The address scheme specified as a default: %s, is not recognized' % default
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/provide/utils'...
Listing './lib/python3.5/site-packages/provide-0.8.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
Listing './var'...
Listing './var/log'...
Listing './var/www'...
